# vlc-plylst

./: .gitignore  README.md  pyproject.toml  schema.sql
src/: __init__.py  cli.py  db.py  nfo_parser.py  playlist.py  query.py  repl.py  scanner.py
